--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="dist/images/favicon-32x32.png">
   <!-- font awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
   <!-- main style -->
@@ -16,27 +16,27 @@
   <section class="hero">
     <div class="hero__container">
       <a href="#" class="logo"><img src="dist/images/logo.svg" alt=""></a>
-      <div class="hero__item">
+      <div class="hero__item w-55 w-lg-50 w-sm-100 m-sm-b-50">
         <img src="dist/images/illustration-mockups.svg" alt="">
       </div>
-      <div class="hero__item">
+      <div class="hero__item w-45 w-lg-50 p-l-56 p-sm-l-0 m-t-50 w-sm-100 m-lg-t-0  text-sm-center">
         <h1 class="hero__heading">Build The Community Your Fans Will Love</h1>
         <p class="hero__paragraph">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. </p>
         <a href="#" class="hero__btn">Register</a>
       </div>
-      <div class="group-social-icon">
-        <span></span>
-        <span></span>
-        <span></span>
+      <div class="group-social-icon text-sm-center">
+        <span class="m-l-15 m-sm-lr-5"><a href="#"><i class="fab fa-facebook-f"></i></a></span>
+        <span class="m-l-15 m-sm-lr-5"><a href="#"><i class="fab fa-twitter"></i></a></span>
+        <span class="m-l-15 m-sm-lr-5"><a href="#"><i class="fab fa-instagram"></i></a></span>
       </div>
     </div>
   </section> 
   <!-- hero section end -->
 
   <footer>
-    <p class="attribution">
+    <p class="text-center">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/aljonnnnn">Aljon De Lumen</a>.
     </p>
   </footer>
 </body>
